# application/handler/user/user_handler_initializer.go
@@ -12,5 +12,7 @@ func InitializeUserHandler(
 	userHandler.CreateUser = handler_impl.NewCreateUserHandler(repository)
 	userHandler.GetUser = handler_impl.NewGetUserByIDHandler(repository)
 	userHandler.ActivateUser = handler_impl.NewActivateUserHandler(repository)
+	userHandler.ChangePassword = handler_impl.NewChangePasswordHandler(repository)
+	userHandler.ResetPassword = handler_impl.NewResetPasswordHandler(repository)
 	return &userHandler
 }
