# application/model/ChangePasswordModel.go
@@ -1,0 +1,7 @@
+package model
+
+type ChangePasswordModel struct {
+	Email       string `json:"email"`
+	OldPassword string `json:"oldPassword"`
+	NewPassword string `json:"newPassword"`
+}
